# memon

./: Cargo.toml  LICENSE  README.md  debug_process_names.py  install.sh  memon.py  memory_analysis_report.md  memory_architecture_comparison.md  process_memory_report.md  three_app_comparison_report.md
memon-qwen/: .flake8  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  install.sh  mypy.ini  pyproject.toml  test.sh
memon-qwen/docs/: design.md
memon-qwen/examples/: example_usage.py  watch_demo.py
memon-qwen/src/memon/: __init__.py  main.py
memon-qwen/src/memon_qwen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
memon-qwen/tests/: test_memon.py
src/: main.rs
